# VisiGrid

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEMO.md  LICENSE  LICENSE.md  PRODUCT_DOCTRINE.md  README.md  ROADMAP.md
crates/cli/: Cargo.toml  build.rs  soak.sh
crates/cli/src/: ci.rs  diff.rs  exit_codes.rs  export.rs  fill.rs  hub.rs  main.rs  recon.rs  replay.rs  scripts.rs  session.rs  sheet_ops.rs  signing.rs  util.rs  verify.rs
crates/cli/src/fetch/: authorizenet.rs  common.rs  digits.rs  fiserv.rs  gusto.rs  http.rs  mercury.rs  mod.rs  netsuite.rs  qbo.rs  sftp.rs  stripe.rs  xero.rs
crates/cli/src/fetch/brex/: bank.rs  card.rs  mod.rs
crates/cli/src/fetch/ramp/: bank.rs  card.rs  mod.rs
crates/cli/src/parse/: fiserv_cardpointe_v1.rs  mod.rs  statement_pdf.rs
crates/cli/src/tui/: data.rs  mod.rs
crates/cli/tests/: abuse_tests.rs  build_gusto_mercury_recon.rs  build_recon_template.rs  build_stripe_brex_recon.rs  build_stripe_mercury_recon.rs  build_stripe_qbo_mercury_recon.rs  build_stripe_qbo_recon.rs  fetch_brex.rs  fetch_gusto.rs  fetch_mercury.rs  fetch_stripe.rs  gusto_mercury_recon_tests.rs  inspect_tests.rs  json_contract_tests.rs  peek_tests.rs  property_diff.rs  protocol_golden.rs  stripe_brex_recon_tests.rs  stripe_mercury_recon_tests.rs
crates/cli/tests/abuse/csv/: balanced-minus-row.csv  balanced.csv  comma-number.csv  currency-symbol.csv  short.csv  wrong-decimals.csv
crates/cli/tests/abuse/templates/: recon-template.sheet
crates/cli/tests/fixtures/: inspect_small.xlsx
crates/cli/tests/recon/csv/: brex-balanced.csv  brex-missing-one.csv  gusto-two-payrolls.csv  mercury-balanced.csv  mercury-missing-one.csv  mercury-payroll-matched.csv  mercury-payroll-missing.csv  mercury-single-deposit.csv  stripe-balanced.csv  stripe-unbalanced-rollup.csv
crates/cli/tests/recon/templates/: gusto-mercury-recon.sheet  stripe-brex-recon.sheet  stripe-mercury-recon.sheet  stripe-qbo-mercury-recon.sheet  (+1 more)
crates/config/: Cargo.toml
crates/config/src/: ai.rs  keybindings.rs  lib.rs  omarchy.rs  session.rs  settings.rs  theme.rs
crates/hub_client/: Cargo.toml
crates/hub_client/src/: auth.rs  client.rs  lib.rs
crates/hub_client/tests/: golden_schema.rs
crates/hub_client/tests/golden/: publish-baseline.json  publish-cell-pass.json  publish-fail.json  publish-no-wait.json  publish-pass.json  publish-warn.json
crates/io/: Cargo.toml
crates/io/src/: csv.rs  json.rs  lib.rs  native.rs  scripting.rs  truth.rs  xlsx.rs  xlsx_styles.rs  xlsx_validation.rs
crates/license/: Cargo.toml
crates/license/src/: lib.rs
crates/recon/: Cargo.toml
crates/recon/src/: aggregate.rs  classify.rs  config.rs  derived.rs  engine.rs  error.rs  evidence.rs  lib.rs  matcher.rs  model.rs  settlement.rs  windowed_nm.rs
crates/recon/tests/: integration.rs
crates/recon/tests/fixtures/: daily-close.composite.toml  golden-two-way-wnm.json  ledger-dupes.csv  ledger-multicur.csv  ledger-timing.csv  mercury.csv  multi-currency.csv  qbo-offset.csv  qbo.csv  stripe-dupes.csv  stripe-multicur.csv  stripe-timing.csv  stripe.csv  three-way.recon.toml  two-way.recon.toml  wnm-deposits.csv  wnm-settlements.csv  wnm-two-way.recon.toml
gpui-app/: .gitignore  Cargo.toml  build.rs
gpui-app/assets/: .gitkeep  generate-icons.sh
gpui-app/docs/features/: alt-accelerators.md  title-bar-and-menus.md  workbook-tabs-and-splits-spec.md
gpui-app/examples/: font_test.rs
gpui-app/macos/: Info.plist  entitlements.plist
gpui-app/scripts/: bundle-linux.sh  bundle-macos.sh  bundle-windows.ps1  generate-icons.sh
gpui-app/src/: actions.rs  ai_metrics.rs  app.rs  autocomplete.rs  clipboard.rs  color_palette.rs  command_palette.rs  default_app.rs  default_app_prompt.rs  dialogs.rs  diff.rs  diff_view.rs  docs_links.rs  editing.rs  file_ops.rs  fill.rs  find_replace.rs  formatting.rs  formula_context.rs  formula_refs.rs  grid_ops.rs  hints.rs  history.rs  hub_sync.rs  impact_preview.rs  keybindings.rs  keyboard_hints.rs  links.rs  main.rs  menu_model.rs  menus.rs  minimap.rs  mode.rs  navigation.rs  perf.rs  provenance.rs  ref_target.rs  role_styles.rs  scripting_stub.rs  search.rs  (+17 more)
gpui-app/src/ai/: client.rs  context.rs  mod.rs
gpui-app/src/cloud/: identity.rs  mod.rs  operations.rs  sheets_client.rs  sync.rs
gpui-app/src/hub/: auth.rs  client.rs  mod.rs  types.rs
gpui-app/src/named_ranges/: create.rs  extract.rs  mod.rs  panel.rs  rename.rs
gpui-app/src/scripting/: console_state.rs  custom_functions.rs  debugger.rs  examples.rs  lua_tokenizer.rs  mod.rs  ops.rs  runtime.rs  script_state.rs  sheet_api.rs  text_buffer.rs
gpui-app/src/session_server/: bridge.rs  coalesce.rs  discovery.rs  events.rs  mod.rs  protocol.rs  rate_limiter.rs  server.rs
gpui-app/src/session_server/protocol_golden/: apply_ops_ok.jsonl  errors.jsonl  events_dropped.jsonl  hello_ok.jsonl  hello_protocol_mismatch.jsonl  inspect.jsonl  ping_pong.jsonl  stats.jsonl  subscribe_events.jsonl  subscribe_events_large_paste.jsonl  writer_conflict.jsonl
gpui-app/src/settings/: document.rs  mod.rs  persistence.rs  resolved.rs  store.rs  types.rs  user.rs
gpui-app/src/terminal/: extract.rs  mod.rs  pty.rs  state.rs
gpui-app/src/ui/: button.rs  dialog_frame.rs  locked_feature_panel.rs  mod.rs  modal.rs  popup.rs  text_input.rs
gpui-app/src/views/: about_dialog.rs  actions_edit.rs  actions_nav.rs  actions_ui.rs  ai_settings_dialog.rs  ask_ai_dialog.rs  code_render.rs  color_picker.rs  command_palette.rs  context_menu.rs  convert_picker.rs  cycle_banner.rs  export_report_dialog.rs  f1_help.rs  filter_dropdown.rs  find_dialog.rs  font_picker.rs  format_bar.rs  formula_bar.rs  goto_dialog.rs  grid.rs  headers.rs  hub_dialogs.rs  impact_preview.rs  import_overlay.rs  import_report_dialog.rs  inspector_panel.rs  key_handler.rs  keytips_overlay.rs  license_dialog.rs  lua_console.rs  lua_console_stub.rs  menu_bar.rs  minimap.rs  mod.rs  named_range_dialogs.rs  number_format_dialog.rs  paste_special_dialog.rs  preferences_panel.rs  profiler_panel.rs  (+10 more)
gpui-app/windows/: visigrid.manifest  visigrid.rc
(+342 files in other folders)
