[workspace]
resolver = "2"
default-members = ["gpui-app"]
members = [
    "crates/engine",
    "crates/core",
    "crates/io",
    "crates/config",
    "crates/license",
    "crates/cli",
    "gpui-app",
]

[workspace.package]
version = "0.1.9"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"

# Internal crates
visigrid-engine = { path = "crates/engine" }
visigrid-core = { path = "crates/core" }
visigrid-io = { path = "crates/io" }
visigrid-config = { path = "crates/config" }
visigrid-license = { path = "crates/license" }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

[profile.dev]
opt-level = 1
