[workspace]
resolver = "2"
default-members = ["gpui-app"]
members = [
    "crates/engine",
    "crates/core",
    "crates/io",
    "crates/config",
    "crates/license",
    "crates/protocol",
    "crates/hub_client",
    "crates/cli",
    "gpui-app",
]

[workspace.package]
version = "0.7.2"
edition = "2021"
license = "AGPL-3.0-only"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
ordered-float = "4"

# Internal crates
visigrid-engine = { path = "crates/engine" }
visigrid-core = { path = "crates/core" }
visigrid-io = { path = "crates/io" }
visigrid-config = { path = "crates/config" }
visigrid-license = { path = "crates/license" }
visigrid-protocol = { path = "crates/protocol" }
visigrid-hub-client = { path = "crates/hub_client" }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

[profile.dev]
opt-level = 1
