[package]
name = "visigrid-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for VisiGrid spreadsheet operations"

[[bin]]
name = "visigrid"
path = "src/main.rs"

[dependencies]
visigrid-engine = { path = "../engine" }
visigrid-io = { path = "../io" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
csv = "1"
shellexpand = "3"
which = "6"
