[package]
name = "visigrid-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for VisiGrid spreadsheet operations"

[[bin]]
name = "visigrid-cli"
path = "src/main.rs"

[dependencies]
visigrid-engine = { path = "../engine" }
visigrid-io = { path = "../io" }
visigrid-config = { path = "../config" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
csv = "1"
shellexpand = "3"
which = "6"

# Provenance replay (Phase 9B)
mlua = { version = "0.10", features = ["lua54", "vendored"] }
blake3 = "1"

[dev-dependencies]
proptest = "1"
