[package]
name = "visigrid-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for VisiGrid spreadsheet operations"

[[bin]]
name = "vgrid"
path = "src/main.rs"

[dependencies]
visigrid-engine = { path = "../engine" }
visigrid-io = { path = "../io" }
visigrid-config = { path = "../config" }
visigrid-protocol = { path = "../protocol" }
visigrid-hub-client = { path = "../hub_client" }
visigrid-recon = { path = "../recon" }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
csv = "1"
shellexpand = "3"
which = "6"

# Provenance replay (Phase 9B)
mlua = { version = "0.10", features = ["lua54", "vendored"] }
blake3 = "1"
sha2 = { workspace = true }
hmac = { workspace = true }

# Proof signing (verify --sign)
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
rand = "0.8"

# TUI viewer (peek command)
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"

# Fetch adapters (Stripe, etc.)
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
url = "2"

# Fetch SFTP adapter
ssh2 = "0.9"
glob = "0.3"

# VisiHub publish
atty = "0.2"

# Session client
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
dirs = "6"
toml.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
httpmock = "0.8"
