[package]
name = "visigrid-io"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "File I/O - native format, CSV, Excel"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
visigrid-engine = { workspace = true }
csv = "1"
calamine = "0.26"

[dev-dependencies]
tempfile = "3"
