[package]
name = "visigrid-io"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "File I/O - native format, CSV, Excel"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
visigrid-engine = { workspace = true }
csv = "1"
calamine = "0.32"
rust_xlsxwriter = "0.79"
encoding_rs = "0.8"
quick-xml = "0.38"
zip = "4"
regex = "1"
blake3 = "1"

[dev-dependencies]
tempfile = "3"
