[package]
name = "visigrid-recon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generic multi-source reconciliation engine"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
csv = "1"

[dev-dependencies]
tempfile = "3"
